# Python-games

./: LICENSE  icon.icns  main.py  pyproject.toml  requirements.txt
game_data/: README.md  bullet.py  controls.py  gun.py  ork.py  run.py  scores.py  statistic.py
rsp/: README.md  R_P_S.py
snake_game/: food.py  main.py  scorebord.py  snake.py
turtle_race/: main.py
